What's new...

May 13/2024 : JF/59.0
  - jfKVM/1.5
    - new : added Monitor stats screen (memory, cpu, disk and network)

May 6/2024 : JF/58.0
  - jfKVM/1.0
    - this last weekend I was able to convert the first
      VMWare guest to jfKVM, an Asterisk PBX we use at work
      Conversion was flawless, booted up like nothing changed.
    - therefore I'm going to finalize this project by
      releasing version 1.0

May 4/2024 : JF/57.3
  - jfKVM/0.93
    - added controllers
  - jfEdit/0.21
    - support UTF-16 files
  - jfSSH/0.3
    - fix msi package
  - May the Forth be with you!

May 3/2024 : JF/57.2
 - jfKVM/0.92 (RC2)
   - added Address control of device in guest VM
 - jfSOCKS/0.17
   - fix KeyMgr issues

Apr 29/2024 : JF/57.1
 - jfKVM/0.91 (RC1)
   - add : VNC password

Apr 27/2024 : JF/57.0
 - jfKVM/0.9
   - Gluster replicated disks (vSAN)
   - fixed host device in guest vm
   - added services panel
 - jfSOCKS/0.16
   - fixed forward secure services use configured SSL keys

Apr 26/2024 : JF/56.1
 - VoIP/SDP
   - fix parsing
 - jfSOCKS/0.15
   - fix : UI issues
 - jfPhone/1.28
 - jfPBX/0.34

Apr 19/2024 : JF/56.0
 - new : javaforce.awt.security.KeyMgr
   - Desktop UI key management tool
 - jfSOCKS/0.14
   - SOCKS server now includes secure.verify option
   - verifies clients SSL kes are signed with server SSL keys
   - most secure SOCKS implementation on the planet
   - see help for more info

Apr 17/2024 : JF/55.0
 - upgraded to wix/4+ for generated MSI packages
   - see readme.txt for more info

Apr 16/2024 : JF/54.3
 - jfKVM/0.8
   - fixed NetworkVirtual retain ip after reboot

Apr 15/2024 : JF/54.2
 - jfKVM/0.7
   - add iSCSI chap auth support

Apr 12/2024 : JF/54.1
 - jfKVM/0.6
   - update docs for iSCSI
   - add Host.hostname
   - add checks for migration
   - UI updates
 - fix Linux deps

Apr 10/2024 : JF/54.0
 - jfKVM/0.5
   - implement iSCSI support (gfs2 or ocfs2) (but still not working yet)
   - add clone VM