@@ -7,7 +7,7 @@
 
   <groupId>io.github.pquiring</groupId>
   <artifactId>javaforce</artifactId>
-  <version>59.0</version>
+  <version>60.0</version>
 
   <scm>
     <url>https://github.com/pquiring/javaforce</url>
